// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TimePicker /> accepts external \`id\` value 1`] = `
<TextInput
  id="ID"
  inputClassName="timepicker"
  options={
    Object {
      "autoClose": false,
      "container": null,
      "defaultTime": "now",
      "duration": 350,
      "fromNow": 0,
      "i18n": Object {
        "cancel": "Cancel",
        "clear": "Clear",
        "done": "Ok",
      },
      "onCloseEnd": null,
      "onCloseStart": null,
      "onOpenEnd": null,
      "onOpenStart": null,
      "onSelect": null,
      "showClearBtn": false,
      "twelveHour": true,
      "vibrate": true,
    }
  }
/>
`;

exports[`<TimePicker /> renders 1`] = `
<TextInput
  id="TimePicker-mockId"
  inputClassName="timepicker"
  options={
    Object {
      "autoClose": false,
      "container": null,
      "defaultTime": "now",
      "duration": 350,
      "fromNow": 0,
      "i18n": Object {
        "cancel": "Cancel",
        "clear": "Clear",
        "done": "Ok",
      },
      "onCloseEnd": null,
      "onCloseStart": null,
      "onOpenEnd": null,
      "onOpenStart": null,
      "onSelect": null,
      "showClearBtn": false,
      "twelveHour": true,
      "vibrate": true,
    }
  }
/>
`;

exports[`<TimePicker /> renders with a label 1`] = `
<TextInput
  id="TimePicker-mockId"
  inputClassName="timepicker"
  label="TimePicker label"
  options={
    Object {
      "autoClose": false,
      "container": null,
      "defaultTime": "now",
      "duration": 350,
      "fromNow": 0,
      "i18n": Object {
        "cancel": "Cancel",
        "clear": "Clear",
        "done": "Ok",
      },
      "onCloseEnd": null,
      "onCloseStart": null,
      "onOpenEnd": null,
      "onOpenStart": null,
      "onSelect": null,
      "showClearBtn": false,
      "twelveHour": true,
      "vibrate": true,
    }
  }
/>
`;
